# openai_router

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
openai_router/: main.py
src/openai_router/: main.py
