[project]
name = "openai-router"
version = "0.1.2"
description = "openai-router"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.3",
    "gradio>=5.49.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[project.scripts]
openai-router = "openai_router.main:cli_app"

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true


[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
